--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>443</width>
-    <height>505</height>
+    <width>300</width>
+    <height>225</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1024</width>
-    <height>768</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -252,32 +252,6 @@
         <bool>true</bool>
        </property>
       </widget>
-      <zorder>audioOn</zorder>
-      <zorder>lineEditRange</zorder>
-      <zorder>comComboBox</zorder>
-      <zorder>label_3</zorder>
-      <zorder>pushButtonComOpen</zorder>
-      <zorder>pushButton_refreshCom</zorder>
-      <zorder>audioOff</zorder>
-      <zorder>lineEditEnc1</zorder>
-      <zorder>label</zorder>
-      <zorder>label_2</zorder>
-      <zorder>lineEditEnc2</zorder>
-      <zorder>label_4</zorder>
-      <zorder>lineEditTerm1</zorder>
-      <zorder>audioOn</zorder>
-      <zorder>lineEditRange</zorder>
-      <zorder>comComboBox</zorder>
-      <zorder>label_3</zorder>
-      <zorder>pushButtonComOpen</zorder>
-      <zorder>pushButton_refreshCom</zorder>
-      <zorder>audioOff</zorder>
-      <zorder>lineEditEnc1</zorder>
-      <zorder>label</zorder>
-      <zorder>label_2</zorder>
-      <zorder>lineEditEnc2</zorder>
-      <zorder>label_4</zorder>
-      <zorder>lineEditTerm1</zorder>
      </widget>
     </item>
     <item>
@@ -290,7 +264,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>443</width>
+     <width>300</width>
      <height>21</height>
     </rect>
    </property>
