--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,7 +51,7 @@
        <property name="geometry">
         <rect>
          <x>200</x>
-         <y>70</y>
+         <y>120</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -80,7 +80,7 @@
        <property name="geometry">
         <rect>
          <x>150</x>
-         <y>40</y>
+         <y>90</y>
          <width>47</width>
          <height>21</height>
         </rect>
@@ -122,7 +122,7 @@
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>40</y>
+         <y>90</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -144,7 +144,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>90</y>
          <width>47</width>
          <height>16</height>
         </rect>
@@ -160,7 +160,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>70</y>
+         <y>120</y>
          <width>47</width>
          <height>21</height>
         </rect>
@@ -176,7 +176,7 @@
        <property name="geometry">
         <rect>
          <x>60</x>
-         <y>70</y>
+         <y>120</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -195,7 +195,7 @@
        <property name="geometry">
         <rect>
          <x>150</x>
-         <y>70</y>
+         <y>120</y>
          <width>47</width>
          <height>21</height>
         </rect>
@@ -211,7 +211,7 @@
        <property name="geometry">
         <rect>
          <x>200</x>
-         <y>40</y>
+         <y>90</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -230,7 +230,7 @@
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>100</y>
+         <y>150</y>
          <width>174</width>
          <height>175</height>
         </rect>
@@ -397,6 +397,71 @@
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QPushButton" name="pushButtonRegistr">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>250</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Registr</string>
+       </property>
+      </widget>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>10</y>
+         <width>113</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>Connection</string>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QRadioButton" name="radioButtonConnUdp">
+          <property name="text">
+           <string>UDP</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButtonConnCom">
+          <property name="text">
+           <string>Com</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QLineEdit" name="lineEditDstAddr">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>40</y>
+         <width>131</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEditDstPort">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>40</y>
+         <width>61</width>
+         <height>20</height>
+        </rect>
+       </property>
       </widget>
      </widget>
     </item>
